[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = ">=0.8.4"

# w/o static-link we'd need to copy the dll to our debug directory.
[dependencies.sdl2]
version = "0.35"
features = ["bundled", "static-link"]
